Display daily rates for neutral vendor suppliers
I've had to `Regexp.escape` the `job_type` in `#have_rates` so that the
parentheses in the daily fee description are escaped correctly.

--- a/app/views/suppliers/neutral_vendors.html.erb
+++ b/app/views/suppliers/neutral_vendors.html.erb
@@ -6,7 +6,11 @@
       <% supplier.rates.each do |rate| %>
         <p>
           <%= Rate::JOB_TYPES[rate.job_type] %>
-          <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
+          <% if rate.percentage_mark_up? %>
+            <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
+          <% else %>
+            <%= number_to_currency(rate.daily_fee, unit: '£') %>
+          <% end %>
         </p>
       <% end %>
     <% end %>
