--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,7 @@
       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
+        <li>hire a specific person (a 'nominated worker')</li>
         <li>find and hire a worker, using an agency</li>
         <li>find a managed service provider, who can take on all your temporary staff needs</li>
         <li>create a shortlist of suppliers based on your needs and download or save it</li>
