--- a/app/views/search/school_postcode.html.erb
+++ b/app/views/search/school_postcode.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :nominated_worker, params[:nominated_worker] %>
-  <%= hidden_field_tag :hire_via_agency, params[:hire_via_agency] %>
+  <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :school_payroll, params[:school_payroll] %>
   <div class="govuk-form-group">
     <h1 class="govuk-label-wrapper">
