--- a/app/views/search/hire_via_agency.html.erb
+++ b/app/views/search/hire_via_agency.html.erb
@@ -10,12 +10,12 @@
           </legend>
           <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <%= radio_button_tag :hire_via_agency, :yes, checked?(params[:hire_via_agency], 'yes'), class: 'govuk-radios__input' %>
-              <%= label_tag :hire_via_agency_yes, 'An individual worker', class: 'govuk-label govuk-radios__label' %>
+              <%= radio_button_tag :looking_for, :worker, checked?(params[:looking_for], 'worker'), class: 'govuk-radios__input' %>
+              <%= label_tag :looking_for_worker, 'An individual worker', class: 'govuk-label govuk-radios__label' %>
             </div>
             <div class="govuk-radios__item">
-              <%= radio_button_tag :hire_via_agency, :no, checked?(params[:hire_via_agency], 'no'), class: 'govuk-radios__input' %>
-              <%= label_tag :hire_via_agency_no, 'A managed service provider', class: 'govuk-label govuk-radios__label' %>
+              <%= radio_button_tag :looking_for, :managed_service_provider, checked?(params[:looking_for], 'managed_service_provider'), class: 'govuk-radios__input' %>
+              <%= label_tag :looking_for_managed_service_provider, 'A managed service provider', class: 'govuk-label govuk-radios__label' %>
             </div>
           </div>
         </fieldset>
