--- a/app/views/search/nominated_worker.html.erb
+++ b/app/views/search/nominated_worker.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag @form_path, method: :get do %>
-  <%= hidden_field_tag :hire_via_agency, params[:hire_via_agency] %>
+  <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
