--- a/app/views/search/school_payroll.html.erb
+++ b/app/views/search/school_payroll.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag @form_path, method: :get do %>
-  <%= hidden_field_tag :hire_via_agency, params[:hire_via_agency] %>
+  <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :nominated_worker, params[:nominated_worker] %>
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
