Rename nominated_worker param to worker_type
Renaming the question and making the two options more explicit makes the
code easier to reason about. It makes it clear that
"nominated_worker=no" was the same as saying that the user is looking
for a worker to be supplied by an agency.

--- a/app/views/search/school_payroll.html.erb
+++ b/app/views/search/school_payroll.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
-  <%= hidden_field_tag :nominated_worker, params[:nominated_worker] %>
+  <%= hidden_field_tag :worker_type, params[:worker_type] %>
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
