--- a/app/views/search/nominated_worker.html.erb
+++ b/app/views/search/nominated_worker.html.erb
@@ -9,12 +9,12 @@
       </legend>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <%= radio_button_tag :nominated_worker, :no, checked?(params[:nominated_worker], 'no'), class: 'govuk-radios__input' %>
-          <%= label_tag :nominated_worker_no, 'Yes', class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :worker_type, :agency_supplied, checked?(params[:worker_type], 'agency_supplied'), class: 'govuk-radios__input' %>
+          <%= label_tag :worker_type_agency_supplied, 'Yes', class: 'govuk-label govuk-radios__label' %>
         </div>
         <div class="govuk-radios__item">
-          <%= radio_button_tag :nominated_worker, :yes, checked?(params[:nominated_worker], 'yes'), class: 'govuk-radios__input' %>
-          <%= label_tag :nominated_worker_yes, "No, I have a worker I want the agency to manage (a 'nominated worker')", class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :worker_type, :nominated, checked?(params[:worker_type], 'nominated'), class: 'govuk-radios__input' %>
+          <%= label_tag :worker_type_nominated, "No, I have a worker I want the agency to manage (a 'nominated worker')", class: 'govuk-label govuk-radios__label' %>
         </div>
       </div>
     </fieldset>
