--- a/app/views/search/school_postcode.html.erb
+++ b/app/views/search/school_postcode.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
-  <%= hidden_field_tag :school_payroll, params[:school_payroll] %>
+  <%= hidden_field_tag :payroll_provider, params[:payroll_provider] %>
   <div class="govuk-form-group">
     <h1 class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--m" for="postcode">
