--- a/app/views/search/managed_service_provider.html.erb
+++ b/app/views/search/managed_service_provider.html.erb
@@ -9,12 +9,12 @@
       </legend>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <%= radio_button_tag :master_vendor, :yes, checked?(params[:master_vendor], 'yes'), class: 'govuk-radios__input' %>
-          <%= label_tag :master_vendor_yes, 'Master vendor managed service', class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :managed_service_provider, :master_vendor, checked?(params[:managed_service_provider], 'master_vendor'), class: 'govuk-radios__input' %>
+          <%= label_tag :managed_service_provider_master_vendor, 'Master vendor managed service', class: 'govuk-label govuk-radios__label' %>
         </div>
         <div class="govuk-radios__item">
-          <%= radio_button_tag :master_vendor, :no, checked?(params[:master_vendor], 'no'), class: 'govuk-radios__input' %>
-          <%= label_tag :master_vendor_no, 'Neutral vendor managed service', class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :managed_service_provider, :neutral_vendor, checked?(params[:managed_service_provider], 'neutral_vendor'), class: 'govuk-radios__input' %>
+          <%= label_tag :managed_service_provider_neutral_vendor, 'Neutral vendor managed service', class: 'govuk-label govuk-radios__label' %>
         </div>
       </div>
     </fieldset>
