Updating colour of link element states

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -63,3 +63,7 @@ $govuk-font-weight-bold: 700;
 
 $govuk-heading-xl: 48px;
 $govuk-heading-l: 27px;
+
+$govuk-link-colour: #007194;
+$govuk-link-hover-colour: #2b8cc4;
+$govuk-link-visited-colour: #4c2c92;
