Fixing line height on phase tag
Styling now better matches new typeface

Moved previous override to correct (new) scss file

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -13,7 +13,6 @@
 @import "govuk-frontend/components/inset-text/inset-text";
 @import "govuk-frontend/components/panel/panel";
 @import "govuk-frontend/components/tabs/tabs";
-@import "govuk-frontend/components/tag/tag";
 @import "govuk-frontend/components/radios/radios";
 @import "govuk-frontend/components/select/select";
 @import "govuk-frontend/components/table/table";
@@ -32,3 +31,4 @@
 @import "supplier-record/supplier-record";
 @import "master-vendor-record/master-vendor-record";
 @import "typography/typography";
+@import "tag/tag";
