--- a/app/views/search/looking_for.html.erb
+++ b/app/views/search/looking_for.html.erb
@@ -1,13 +1,18 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_tag @form_path, method: :get do %>
-      <div class="govuk-form-group">
+      <div class="govuk-form-group <%= 'govuk-form-group--error' if flash[:error] %>">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
               <%= t('.question') %>
             </h1>
           </legend>
+          <% if flash[:error] %>
+            <span class="govuk-error-message">
+              <%= flash[:error] %>
+            </span>
+          <% end %>
           <div class="govuk-radios">
             <div class="govuk-radios__item">
               <%= radio_button_tag :looking_for, :worker, checked?(params[:looking_for], 'worker'), class: 'govuk-radios__input' %>
