Restyling fieldset legend
Longer questions that wrap to two lines would have an over zelous line height

Defaulted weight to match other headings

--- a/app/assets/stylesheets/components/fieldset/_fieldset.scss
+++ b/app/assets/stylesheets/components/fieldset/_fieldset.scss
@@ -1,5 +1,5 @@
 @import "govuk-frontend/components/fieldset/fieldset";
 
 .govuk-fieldset__legend--m {
-	line-height: 2;
+	font-weight: $govuk-font-weight-semi-bold;
 }
