--- a/app/views/search/school_postcode.html.erb
+++ b/app/views/search/school_postcode.html.erb
@@ -2,7 +2,7 @@
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :payroll_provider, params[:payroll_provider] %>
-  <div class="govuk-form-group">
+  <div class="govuk-form-group <%= 'govuk-form-group--error' if flash[:error] %>">
     <h1 class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--m" for="postcode">
         <%= t('.question') %>
@@ -11,6 +11,11 @@
         <%= t('.question_hint') %>
       </span>
     </h1>
+    <% if flash[:error] %>
+      <span class="govuk-error-message">
+        <%= flash[:error] %>
+      </span>
+    <% end %>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
   </div>
   <%= submit_tag t('.submit'), class: "govuk-button" %>
