Extract display_flash_error helper method
To remove some duplication from the templates.

--- a/app/views/search/payroll_provider.html.erb
+++ b/app/views/search/payroll_provider.html.erb
@@ -8,11 +8,7 @@
           <%= t('.question') %>
         </h1>
       </legend>
-      <% if flash[:error] %>
-        <span class="govuk-error-message">
-          <%= flash[:error] %>
-        </span>
-      <% end %>
+      <%= display_flash_error %>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
           <%= radio_button_tag :payroll_provider, :school, checked?(params[:payroll_provider], 'school'), class: 'govuk-radios__input' %>
