--- a/app/views/search/agency_payroll.html.erb
+++ b/app/views/search/agency_payroll.html.erb
@@ -6,11 +6,7 @@
     <label class="govuk-label" for="postcode">
       <%= t('.postcode_question') %>
     </label>
-    <% if flash[:error] %>
-      <span class="govuk-error-message">
-        <%= flash[:error] %>
-      </span>
-    <% end %>
+    <%= display_flash_error %>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
   </div>
 
