--- a/app/views/search/managed_service_provider.html.erb
+++ b/app/views/search/managed_service_provider.html.erb
@@ -7,11 +7,7 @@
           <%= t('.question') %>
         </h1>
       </legend>
-      <% if flash[:error] %>
-        <span class="govuk-error-message">
-          <%= flash[:error] %>
-        </span>
-      <% end %>
+      <%= display_flash_error %>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
           <%= radio_button_tag :managed_service_provider, :master_vendor, checked?(params[:managed_service_provider], 'master_vendor'), class: 'govuk-radios__input' %>
