--- a/app/views/search/school_postcode.html.erb
+++ b/app/views/search/school_postcode.html.erb
@@ -11,11 +11,7 @@
         <%= t('.question_hint') %>
       </span>
     </h1>
-    <% if flash[:error] %>
-      <span class="govuk-error-message">
-        <%= flash[:error] %>
-      </span>
-    <% end %>
+    <%= display_flash_error %>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
   </div>
   <%= submit_tag t('.submit'), class: "govuk-button" %>
