--- a/app/views/search/worker_type.html.erb
+++ b/app/views/search/worker_type.html.erb
@@ -7,11 +7,7 @@
           <%= t('.question') %>
         </h1>
       </legend>
-      <% if flash[:error] %>
-        <span class="govuk-error-message">
-          <%= flash[:error] %>
-        </span>
-      <% end %>
+      <%= display_flash_error %>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
           <%= radio_button_tag :worker_type, :agency_supplied, checked?(params[:worker_type], 'agency_supplied'), class: 'govuk-radios__input' %>
