Extract govuk_form_group_with_optional_error helper method
To remove some duplication in the templates.

This isn't great. It relies on us knowing that the flash error is about
the form group that we use this helper for. It'd be better if we had
field/attribute specific errors so that we could use something like this
helper for all govuk-form-group elements.

--- a/app/views/search/agency_payroll.html.erb
+++ b/app/views/search/agency_payroll.html.erb
@@ -2,13 +2,13 @@
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :payroll_provider, params[:payroll_provider] %>
-  <div class="govuk-form-group <%= 'govuk-form-group--error' if flash[:error] %>">
+  <%= govuk_form_group_with_optional_error do %>
     <label class="govuk-label" for="postcode">
       <%= t('.postcode_question') %>
     </label>
     <%= display_flash_error %>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
-  </div>
+  <% end %>
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="job_type">
