--- a/app/views/search/looking_for.html.erb
+++ b/app/views/search/looking_for.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_tag @form_path, method: :get do %>
-      <div class="govuk-form-group <%= 'govuk-form-group--error' if flash[:error] %>">
+      <%= govuk_form_group_with_optional_error do %>
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
@@ -20,7 +20,7 @@
             </div>
           </div>
         </fieldset>
-      </div>
+      <% end %>
       <%= submit_tag 'Continue', class: "govuk-button" %>
     <% end %>
   </div>
