--- a/app/views/search/payroll_provider.html.erb
+++ b/app/views/search/payroll_provider.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
-  <div class="govuk-form-group <%= 'govuk-form-group--error' if flash[:error] %>">
+  <%= govuk_form_group_with_optional_error do %>
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
@@ -20,6 +20,6 @@
         </div>
       </div>
     </fieldset>
-  </div>
+  <% end %>
   <%= submit_tag t('.submit'), class: "govuk-button" %>
 <% end %>
