--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,16 +2,16 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Crown Marketplace</h1>
+      <h1 class="govuk-heading-xl"><%= t('.service_title') %></h1>
 
-      <p>Use this service to:</p>
+      <p><%= t('.intro_paragraph') %></p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-        <%= link_to "Find supply teachers and non-teaching staff", :supply_teachers %>
+        <%= link_to t('.teacher_supply_link'), :supply_teachers %>
         </li>
         <li>
-        <%= link_to "Find a facilities management supplier", :facilities_management %>
+        <%= link_to t('.facilities_management_link'), :facilities_management %>
         </li>
       </ul>
     </div>
