Localise search/looking_for submit_tag

--- a/app/views/search/looking_for.html.erb
+++ b/app/views/search/looking_for.html.erb
@@ -21,7 +21,7 @@
           </div>
         </fieldset>
       <% end %>
-      <%= submit_tag 'Continue', class: "govuk-button" %>
+      <%= submit_tag t('.submit'), class: "govuk-button" %>
     <% end %>
   </div>
   <div class="govuk-grid-column-one-third">
