Avoid using flash for storing error messages
This is another step toward being able to display attribute-specific
error messages.

Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/app/views/search/agency_payroll.html.erb
+++ b/app/views/search/agency_payroll.html.erb
@@ -2,11 +2,11 @@
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :payroll_provider, params[:payroll_provider] %>
-  <%= govuk_form_group_with_optional_error do %>
+  <%= govuk_form_group_with_optional_error(@journey) do %>
     <label class="govuk-label" for="postcode">
       <%= t('.postcode_question') %>
     </label>
-    <%= display_flash_error %>
+    <%= display_flash_error(@journey) %>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
   <% end %>
 
