--- a/app/views/search/agency_payroll.html.erb
+++ b/app/views/search/agency_payroll.html.erb
@@ -6,7 +6,7 @@
     <label class="govuk-label" for="postcode">
       <%= t('.postcode_question') %>
     </label>
-    <%= display_flash_error(@journey) %>
+    <%= display_error(@journey) %>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
   <% end %>
 
