--- a/app/views/search/worker_type.html.erb
+++ b/app/views/search/worker_type.html.erb
@@ -7,7 +7,7 @@
           <%= t('.question') %>
         </h1>
       </legend>
-      <%= display_flash_error(@journey) %>
+      <%= display_error(@journey) %>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
           <%= radio_button_tag :worker_type, :agency_supplied, checked?(params[:worker_type], 'agency_supplied'), class: 'govuk-radios__input' %>
