Move translation of 'Continue' to a common key
We use 'Continue' on all of the submit buttons so we can move this to
its own key to save on duplication.

--- a/app/views/search/agency_payroll.html.erb
+++ b/app/views/search/agency_payroll.html.erb
@@ -28,5 +28,5 @@
     </select>
   </div>
 
-  <%= submit_tag t('.submit'), class: "govuk-button" %>
+  <%= submit_tag t('common.submit'), class: "govuk-button" %>
 <% end %>
