--- a/app/views/search/school_postcode.html.erb
+++ b/app/views/search/school_postcode.html.erb
@@ -14,5 +14,5 @@
     <%= display_error(@journey) %>
     <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
   <% end %>
-  <%= submit_tag t('.submit'), class: "govuk-button" %>
+  <%= submit_tag t('common.submit'), class: "govuk-button" %>
 <% end %>
