--- a/app/views/search/managed_service_provider.html.erb
+++ b/app/views/search/managed_service_provider.html.erb
@@ -20,5 +20,5 @@
       </div>
     </fieldset>
   <% end %>
-  <%= submit_tag t('.submit'), class: "govuk-button" %>
+  <%= submit_tag t('common.submit'), class: "govuk-button" %>
 <% end %>
