--- a/app/views/search/payroll_provider.html.erb
+++ b/app/views/search/payroll_provider.html.erb
@@ -21,5 +21,5 @@
       </div>
     </fieldset>
   <% end %>
-  <%= submit_tag t('.submit'), class: "govuk-button" %>
+  <%= submit_tag t('common.submit'), class: "govuk-button" %>
 <% end %>
