Display attribute-specific errors in templates
We're displaying a single error for each attribute to avoid the
potential problem of overloading the user with information. _If_ there
are multiple validation errors for an attribute the user will be
prompted to address each problem one at a time.

We're no longer displaying all error messages as a sentence so we've
removed the `Journey#error` method.

We've added `Journey#errors` (delegating to the current step) so that we
can extract errors for specific attributes in the templates.

Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/app/views/search/managed_service_provider.html.erb
+++ b/app/views/search/managed_service_provider.html.erb
@@ -7,7 +7,7 @@
           <%= t('.question') %>
         </h1>
       </legend>
-      <%= display_error(@journey) %>
+      <%= display_error(@journey, :managed_service_provider) %>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
           <%= radio_button_tag :managed_service_provider, :master_vendor, checked?(params[:managed_service_provider], 'master_vendor'), class: 'govuk-radios__input' %>
