Fix back button on first step of journeys
Introduces a journey#start_path and journey#first_step_path which
enable us to make a simple start route and return to the home page
of the journey, which is no longer the start page of the app.

--- a/app/views/home/supply-teachers.html.erb
+++ b/app/views/home/supply-teachers.html.erb
@@ -13,7 +13,7 @@
         <li>create a shortlist of suppliers based on your needs and download or save it</li>
       </ul>
 
-      <%= link_to 'Start now', journey_question_path(journey: TeacherSupplyJourney.journey_name, slug: 'looking-for'), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+      <%= link_to 'Start now', journey_start_url(journey: TeacherSupplyJourney.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
