Add red border around text fields with validation errors
As per https://design-system.service.gov.uk/components/text-input/#error-messages

Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/app/views/journey/agency_payroll.html.erb
+++ b/app/views/journey/agency_payroll.html.erb
@@ -7,7 +7,7 @@
       <%= t('.postcode_question') %>
     </label>
     <%= display_error(@journey, :location) %>
-    <%= text_field_tag :postcode, params[:postcode], class: 'govuk-input' %>
+    <%= text_field_tag :postcode, params[:postcode], class: css_classes_for_input(@journey, :location) %>
   <% end %>
 
   <div class="govuk-form-group">
