Display Error Summary when validation fails
As per https://design-system.service.gov.uk/components/error-summary/.

Note that we're only displaying the first error for each attribute in
the error summary to mirror what we're doing for each form input[1].

[1]: 006af8e34b504f7f79f977266983f65b307a6721

Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/app/views/journey/payroll_provider.html.erb
+++ b/app/views/journey/payroll_provider.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
