--- a/app/views/journey/managed_service_provider.html.erb
+++ b/app/views/journey/managed_service_provider.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= govuk_form_group_with_optional_error(@journey) do %>
