--- a/app/views/journey/looking_for.html.erb
+++ b/app/views/journey/looking_for.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-two-thirds">
     <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
     <%= form_tag @form_path, method: :get do %>
-      <%= govuk_form_group_with_optional_error(@journey) do %>
+      <%= govuk_form_group_with_optional_error(@journey, :looking_for) do %>
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
