--- a/app/views/journey/payroll_provider.html.erb
+++ b/app/views/journey/payroll_provider.html.erb
@@ -2,7 +2,7 @@
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
-  <%= govuk_form_group_with_optional_error(@journey) do %>
+  <%= govuk_form_group_with_optional_error(@journey, :payroll_provider) do %>
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
