--- a/app/views/journey/school_postcode.html.erb
+++ b/app/views/journey/school_postcode.html.erb
@@ -13,7 +13,7 @@
       <%= t('.question_hint') %>
     </span>
     <%= display_error(@journey, :location) %>
-    <%= text_field_tag :postcode, params[:postcode], class: css_classes_for_input(@journey, :location) %>
+    <%= text_field_tag :postcode, params[:postcode], class: css_classes_for_input(@journey, :location, ['govuk-input--width-10']) %>
   <% end %>
   <%= submit_tag t('common.submit'), class: "govuk-button" %>
 <% end %>
