--- a/app/views/journey/payroll_provider.html.erb
+++ b/app/views/journey/payroll_provider.html.erb
@@ -3,7 +3,7 @@
   <%= hidden_field_tag :looking_for, params[:looking_for] %>
   <%= hidden_field_tag :worker_type, params[:worker_type] %>
   <%= govuk_form_group_with_optional_error(@journey, :payroll_provider) do %>
-    <fieldset class="govuk-fieldset">
+    <%= govuk_fieldset_with_optional_error(@journey, :payroll_provider) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
           <%= t('.question') %>
@@ -20,7 +20,7 @@
           <%= label_tag :payroll_provider_agency, t('.answer_agency_payroll'), class: 'govuk-label govuk-radios__label' %>
         </div>
       </div>
-    </fieldset>
+    <% end %>
   <% end %>
   <%= submit_tag t('common.submit'), class: "govuk-button" %>
 <% end %>
