Extract error_id
To DRY up helper methods and error_summary partial.

Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/app/views/journey/_error_summary.html.erb
+++ b/app/views/journey/_error_summary.html.erb
@@ -7,7 +7,7 @@
       <ul class="govuk-list govuk-error-summary__list">
         <% errors.keys.each do |attribute| %>
           <li>
-            <a href="<%= "##{attribute}-error" %>"><%= errors[attribute].first %></a>
+            <a href="#<%= error_id(attribute) %>"><%= errors[attribute].first %></a>
           </li>
         <% end %>
       </ul>
